wip: endpoints seem to work, swagger properly documenting
